--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,8 +11,9 @@
     <meta name="keywords" content="Comfort Cooling Service, строительные материалы в Ташкенте, Шумоглошители, Теплообменники, канальное оборудование,
     пожарная сигнализация, система обогрева, фильтры">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../src/index.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Oswald:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
